[gd_scene load_steps=6 format=3 uid="uid://cipkeb6hjsgkf"]

[ext_resource type="Script" path="res://table/pot.gd" id="1_u6qh0"]
[ext_resource type="Texture2D" uid="uid://bq6m4g5mvqh3s" path="res://resources/table/star.png" id="2_ejjt8"]
[ext_resource type="Texture2D" uid="uid://7d5ngu5wdvqg" path="res://resources/table/big_chips.png" id="3_q1b1x"]
[ext_resource type="FontFile" uid="uid://c3j6oa1sotgmy" path="res://resources/monogram.ttf" id="4_bguk2"]

[sub_resource type="LabelSettings" id="LabelSettings_okoyi"]
font = ExtResource("4_bguk2")
font_size = 87
font_color = Color(0, 0, 0, 1)

[node name="Pot" type="Node2D"]
script = ExtResource("1_u6qh0")

[node name="Star1" type="TextureRect" parent="."]
offset_right = 37.0
offset_bottom = 34.0
texture = ExtResource("2_ejjt8")

[node name="Chips1" type="Sprite2D" parent="."]
visible = false
position = Vector2(19, 17)
texture = ExtResource("3_q1b1x")
region_enabled = true
region_rect = Rect2(0, 0, 36, 36)

[node name="PotLabel" type="Label" parent="."]
offset_left = 193.0
offset_top = -23.0
offset_right = 423.0
offset_bottom = 49.0
label_settings = SubResource("LabelSettings_okoyi")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Star2" type="TextureRect" parent="."]
offset_left = 573.0
offset_right = 610.0
offset_bottom = 34.0
texture = ExtResource("2_ejjt8")

[node name="Chips2" type="Sprite2D" parent="."]
visible = false
position = Vector2(591, 17)
texture = ExtResource("3_q1b1x")
region_enabled = true
region_rect = Rect2(0, 0, 36, 36)
